--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "a movie api ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "dependencies": {
-  "express":"*",
-  "mongoose":"*",
-  "bcryptjs":"*",
-  "cors":"*",
-  "jsonwebtoken":"*",
-  "body-parser":"*",
-  "passport":"*",
-  "passport-jwt":"*"
-},
+    "express": "*",
+    "mongoose": "*",
+    "bcryptjs": "*",
+    "cors": "*",
+    "jsonwebtoken": "*",
+    "body-parser": "*",
+    "passport": "*",
+    "passport-jwt": "*"
+  },
   "devDependencies": {
     "mocha": "^1.21.3",
     "should": "^4.0.4",
